# rse_prob_robotics

./: .gitignore  README.md  Simple_Robotics_Perception_Experiment_3_3_D_Object_Detection_in_Point_Clouds.ipynb
log/: latest_list
maps/: grid_map_0.1.json  grid_map_0.2.json  test.json
rse_common_utils/: package.xml  setup.cfg  setup.py
rse_common_utils/rse_common_utils/: helper_utils.py  jacobians.py  jacobians_odom.py  jacobians_odom_imu.py  plot_jacobians.py  sampling_utils.py  sensor_utils.py  visualization.py  visualization_3D.py
rse_gaussian_filters/: README.md  package.xml  setup.cfg  setup.py  steps.txt
rse_gaussian_filters/launch/: rviz_launch.launch.py
rse_gaussian_filters/rse_gaussian_filters/: einf_3d_state_estimation_v1_no_cmd.py  einf_3d_state_estimation_v2_no_cmd.py  einf_7d_state_estimation_no_cmd.py  einf_8d_state_estimation_no_cmd.py  ekf_3d_state_estimation_v1_no_cmd.py  ekf_3d_state_estimation_v2_no_cmd.py  ekf_3d_state_estimation_v3_no_cmd.py  ekf_7d_state_estimation_no_cmd.py  ekf_8d_state_estimation_no_cmd.py  (+12 more)
rse_lidar_odometry/: package.xml  setup.cfg  setup.py
rse_map_models/: package.xml  setup.cfg  setup.py
rse_motion_models/: package.xml  setup.cfg  setup.py
rse_nonparametric_filters/: README.md  package.xml  setup.cfg  setup.py
rse_observation_models/: package.xml  setup.cfg  setup.py
rse_occupancy_grid_mapping/: README.md  package.xml  setup.cfg  setup.py
rse_parametric_filters/: README.md  package.xml  setup.cfg  setup.py
rse_perception_experiments/: README.md
rse_sensor_models/: package.xml  setup.cfg  setup.py
(+40 files in other folders)
